--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,56 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_main_activity2">MainActivity2</string>
+
+    <!--copied from http://www.androidhive.info/2013/11/android-sliding-menu-using-navigation-drawer/-->
+    <!--string name="app_name">Slider Menu</string>
+    <string name="action_settings">Settings</string>
+    <string name="hello_world">Hello world!</string-->
+    <string name="drawer_open">Slider Menu Opened</string>
+    <string name="drawer_close">Slider Menu Closed</string>
+
+    <!-- Nav Drawer Menu Items -->
+    <string-array name="nav_drawer_items">
+        <item >Home</item>
+        <item >Find People</item>
+        <item >Photos</item>
+        <item >Communities</item>
+        <item >Pages</item>
+        <item >What\'s Hot</item>
+    </string-array>
+
+    <!-- Nav Drawer List Item Icons -->
+    <!-- Keep them in order as the titles are in -->
+    <array name="nav_drawer_icons">
+        <item>@drawable/ic_home</item>
+        <item>@drawable/ic_people</item>
+        <item>@drawable/ic_photos</item>
+        <item>@drawable/ic_communities</item>
+        <item>@drawable/ic_pages</item>
+        <item>@drawable/ic_whats_hot</item>
+    </array>
+
+    <!-- Content Description -->
+    <string name="desc_list_item_icon">Item Icon</string>
+    <string name="title_activity_picutre">picutre</string>
+    <string name="title_activity_callendar">callendar</string>
+    <string name="title_activity_blog">blog</string>
+    <string name="title_activity_newsletter">newsletter</string>
+    <string name="title_activity_contact_the_artist">contact_the_artist</string>
+    <string name="title_activity_about_the_artist">about_the_artist</string>
+    <string name="title_activity_artists_resume">artists_resume</string>
+    <string name="title_activity_invest">invest</string>
+    <string name="title_activity_our_services">our_services</string>
+    <string name="title_activity_about_download">about_download</string>
+    <string name="title_activity_download">download</string>
+    <string name="title_activity_product_info">product_info</string>
+    <string name="title_activity_workshops">workshops</string>
+    <string name="title_activity_books">books</string>
+    <string name="title_activity_client_viewing">client_viewing</string>
+    <string name="title_activity_testimonials">testimonials</string>
+    <string name="title_activity_guarantee">guarantee</string>
+    <string name="title_activity_model_release">model_release</string>
+    <string name="title_activity_terms_of_use">terms_of_use</string>
+
 </resources>
