--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,9 +8,11 @@
     <!--copied from http://www.androidhive.info/2013/11/android-sliding-menu-using-navigation-drawer/-->
     <!--string name="app_name">Slider Menu</string>
     <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string-->
-    <string name="drawer_open">Slider Menu Opened</string>
-    <string name="drawer_close">Slider Menu Closed</string>
+    <string name="hello_world">Hello world!</string>
+    and from https://github.com/treehouse/android-navigation-drawer-final/blob/master/app/src/main/res/values/strings.xml-->
+
+    <string name="drawer_open">Open navigation drawer</string>
+    <string name="drawer_close">Close navigation drawer</string>
 
     <!-- Nav Drawer Menu Items -->
     <string-array name="nav_drawer_items">
@@ -21,17 +23,6 @@
         <item >Pages</item>
         <item >What\'s Hot</item>
     </string-array>
-
-    <!-- Nav Drawer List Item Icons -->
-    <!-- Keep them in order as the titles are in -->
-    <array name="nav_drawer_icons">
-        <item>@drawable/ic_home</item>
-        <item>@drawable/ic_people</item>
-        <item>@drawable/ic_photos</item>
-        <item>@drawable/ic_communities</item>
-        <item>@drawable/ic_pages</item>
-        <item>@drawable/ic_whats_hot</item>
-    </array>
 
     <!-- Content Description -->
     <string name="desc_list_item_icon">Item Icon</string>
