--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,5 +47,6 @@
     <string name="title_activity_web">WebActivity</string>
     <string name="title_activity_gallery">GalleryActivity</string>
     <string name="title_activity_events">EventsActivity</string>
+    <string name="title_activity_picture">Picture</string>
 
 </resources>
