--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,5 +48,6 @@
     <string name="title_activity_gallery">GalleryActivity</string>
     <string name="title_activity_events">EventsActivity</string>
     <string name="title_activity_picture">Picture</string>
+    <string name="title_activity_horiz_gallery">HorizGalleryActivity</string>
 
 </resources>
