Deleted about download, abt artist, resume, blog, books, cli viewing, contact artist, download, gallimagadpter, guarantee, horizgall activity, inves, model release, newsletter, services, prod info, terms use, testimonials, workshops, and all their activity layout and menu files. Cleaned up GalleryActivity, MainActivity, strings.xml, and AndroidManifest. Created IndividualPictureActivity.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,5 +49,6 @@
     <string name="title_activity_events">EventsActivity</string>
     <string name="title_activity_picture">Picture</string>
     <string name="title_activity_horiz_gallery">HorizGalleryActivity</string>
+    <string name="title_activity_individual_picture">IndividualPicture</string>
 
 </resources>
