--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,52 +3,18 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_main_activity2">MainActivity2</string>
 
-    <!--copied from http://www.androidhive.info/2013/11/android-sliding-menu-using-navigation-drawer/-->
-    <!--string name="app_name">Slider Menu</string>
-    <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
+    <!--base Nav Drawer Menu code from http://www.androidhive.info/2013/11/android-sliding-menu-using-navigation-drawer/
     and from https://github.com/treehouse/android-navigation-drawer-final/blob/master/app/src/main/res/values/strings.xml-->
 
     <string name="drawer_open">Open navigation drawer</string>
     <string name="drawer_close">Close navigation drawer</string>
 
-    <!-- Nav Drawer Menu Items -->
-    <string-array name="nav_drawer_items">
-        <item >Home</item>
-        <item >Find People</item>
-        <item >Photos</item>
-        <item >Communities</item>
-        <item >Pages</item>
-        <item >What\'s Hot</item>
-    </string-array>
-
     <!-- Content Description -->
     <string name="desc_list_item_icon">Item Icon</string>
-    <string name="title_activity_calendar">callendar</string>
-    <string name="title_activity_blog">blog</string>
-    <string name="title_activity_newsletter">newsletter</string>
-    <string name="title_activity_contact_the_artist">contact_the_artist</string>
-    <string name="title_activity_about_the_artist">about_the_artist</string>
-    <string name="title_activity_artists_resume">artists_resume</string>
-    <string name="title_activity_invest">invest</string>
-    <string name="title_activity_our_services">our_services</string>
-    <string name="title_activity_about_download">about_download</string>
-    <string name="title_activity_download">download</string>
-    <string name="title_activity_product_info">product_info</string>
-    <string name="title_activity_workshops">workshops</string>
-    <string name="title_activity_books">books</string>
-    <string name="title_activity_client_viewing">client_viewing</string>
-    <string name="title_activity_testimonials">testimonials</string>
-    <string name="title_activity_guarantee">guarantee</string>
-    <string name="title_activity_model_release">model_release</string>
-    <string name="title_activity_terms_of_use">terms_of_use</string>
-    <string name="title_activity_web">WebActivity</string>
     <string name="title_activity_gallery">GalleryActivity</string>
     <string name="title_activity_events">EventsActivity</string>
     <string name="title_activity_picture">Picture</string>
-    <string name="title_activity_horiz_gallery">HorizGalleryActivity</string>
     <string name="title_activity_individual_picture">IndividualPicture</string>
 
 </resources>
